--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+	"author": "Jane Doe",
 	"name": "fcc-learn-npm-package-json",
 	"dependencies": {
 		"express": "^4.14.0"
@@ -13,6 +14,5 @@
 	"repository": {
 		"type": "git",
 		"url": "https://idontknow/todo.git"
-	},
-	"author": "Greg Cooper"
+	}
 }
